force-app/main/default/objects/Activity/fields/aircall__Answered_by__c.field-meta.xml
<CustomField>
    <fullName>aircall__Answered_by__c</fullName>
    <description>Aircall user who answered the call.</description>
    <label>Answered by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>