force-app/main/default/objects/Activity/fields/aircall__Call_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>aircall__Call_Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>