force-app/main/default/objects/Activity/fields/aircall__CallId__c.field-meta.xml
<CustomField>
    <fullName>aircall__CallId__c</fullName>
    <label>Call Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>