force-app/main/default/objects/Activity/fields/aircall__Country__c.field-meta.xml
<CustomField>
    <fullName>aircall__Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>