force-app/main/default/objects/Activity/fields/aircall__External_contact_phone_number__c.field-meta.xml
<CustomField>
    <fullName>aircall__External_contact_phone_number__c</fullName>
    <label>External contact phone number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>