force-app/main/default/objects/Activity/fields/aircall__Handle_Time__c.field-meta.xml
<CustomField>
    <fullName>aircall__Handle_Time__c</fullName>
    <label>Handle Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>