force-app/main/default/objects/Activity/fields/aircall__Hour_in_time_zone__c.field-meta.xml
<CustomField>
    <fullName>aircall__Hour_in_time_zone__c</fullName>
    <label>Hour in timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>