force-app/main/default/objects/Activity/fields/aircall__Made_By__c.field-meta.xml
<CustomField>
    <fullName>aircall__Made_By__c</fullName>
    <label>Made By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>