force-app/main/default/objects/Activity/fields/aircall__Number_Name__c.field-meta.xml
<CustomField>
    <fullName>aircall__Number_Name__c</fullName>
    <label>Number name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>