force-app/main/default/objects/Activity/fields/aircall__Time_zone__c.field-meta.xml
<CustomField>
    <fullName>aircall__Time_zone__c</fullName>
    <label>Time zone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>