force-app/main/default/objects/Activity/fields/aircall__Transferred_to__c.field-meta.xml
<CustomField>
    <fullName>aircall__Transferred_to__c</fullName>
    <description>Aircall user to whom the call was transferred.</description>
    <label>Transferred to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>