force-app/main/default/objects/Activity/fields/aircall__Waiting_Time__c.field-meta.xml
<CustomField>
    <fullName>aircall__Waiting_Time__c</fullName>
    <description>Time during which the caller waited in line before being connected with the callee.</description>
    <label>Waiting Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>