force-app/main/default/objects/Activity/fields/Assigned_Dept__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Dept__c</fullName>
    <formula>Owner:User.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned Dept</label>
    <type>Text</type>
</CustomField>