force-app/main/default/objects/Activity/fields/Call_Grade__c.field-meta.xml
<CustomField>
    <fullName>Call_Grade__c</fullName>
    <description>This field will capture the call grade from the sales agent perspective.</description>
    <label>Call Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outstanding</fullName>
            </value>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Challenging</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Unproductive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>