force-app/main/default/objects/Activity/fields/Call_Result_Simplified__c.field-meta.xml
<CustomField>
    <fullName>Call_Result_Simplified__c</fullName>
    <description>This field will look at the CallDisposition field and determine what the true Disposition is.</description>
    <formula>if(CONTAINS(CallDisposition, &apos;No Answer&apos;),&apos;No Answer&apos;,
if(CONTAINS(UPPER(CallDisposition), &apos;LEFT VOICEMAIL&apos;),&apos;Left Voicemail&apos;,
if(CONTAINS(CallDisposition, &apos;Correct Contact&apos;),&apos;Correct Contact&apos;,
if(CONTAINS(CallDisposition, &apos;answered_call&apos;),&apos;Answered Call&apos;,
if(CONTAINS(CallDisposition, &apos;Wrong Number&apos;),&apos;Wrong Number&apos;,
if(CONTAINS(CallDisposition, &apos;Busy&apos;),&apos;Busy&apos;,
if(CONTAINS(CallDisposition, &apos;Left Live message&apos;),&apos;Left Live message&apos;,
if(CONTAINS(CallDisposition, &apos;Disconnected Number&apos;),&apos;Disconnected Number&apos;,
if(CONTAINS(CallDisposition, &apos;unanswered&apos;),&apos;No Answer&apos;,
CallDisposition)))))))))</formula>
    <label>Call Result Simplified</label>
    <type>Text</type>
</CustomField>