force-app/main/default/objects/Activity/fields/Creator_Dept__c.field-meta.xml
<CustomField>
    <fullName>Creator_Dept__c</fullName>
    <description>Used to identify tasks completed by Field Sales dept.</description>
    <formula>CreatedBy.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creator Dept</label>
    <type>Text</type>
</CustomField>