force-app/main/default/objects/Activity/fields/Dialpad__Call_Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Call_Recording_URL__c</fullName>
    <label>Call Recording URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>