force-app/main/default/objects/Activity/fields/Dialpad__Call_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Call_Start_Time__c</fullName>
    <label>Call Start Time</label>
    <type>DateTime</type>
</CustomField>