force-app/main/default/objects/Activity/fields/Dialpad__CallId__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__CallId__c</fullName>
    <label>CallId</label>
    <length>32</length>
    <type>Text</type>
</CustomField>