force-app/main/default/objects/Activity/fields/Dialpad__Dialpad_Agents__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Dialpad_Agents__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dialpad Agents</label>
    <referenceTo>Dialpad__Dialpad_Agents__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>