force-app/main/default/objects/Activity/fields/Dialpad__Dialpad_Call_Center__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__Dialpad_Call_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dialpad Call Center</label>
    <referenceTo>Dialpad__Dialpad_Call_Centers__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>