force-app/main/default/objects/Activity/fields/Dialpad__IsDialpadCallLog__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__IsDialpadCallLog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDialpadCallLog</label>
    <type>Checkbox</type>
</CustomField>