force-app/main/default/objects/Activity/fields/Dialpad__PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>Dialpad__PhoneNumber__c</fullName>
    <label>PhoneNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>