force-app/main/default/objects/Activity/fields/Discussed_Americord_Differentiators__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Americord_Differentiators__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies when the task deals with a client that discussed What Makes Americord Different.</description>
    <label>What Makes Americord Different</label>
    <type>Checkbox</type>
</CustomField>