force-app/main/default/objects/Activity/fields/Discussed_Appointment_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Appointment_Scheduling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies when the task deals with a client that discussed Appointment Scheduling.</description>
    <label>Appointment Scheduling</label>
    <type>Checkbox</type>
</CustomField>