force-app/main/default/objects/Activity/fields/Discussed_Cord_Blood__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Cord_Blood__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies when the task deals with a client that discussed Cord Blood.</description>
    <label>Cord Blood</label>
    <type>Checkbox</type>
</CustomField>