force-app/main/default/objects/Activity/fields/Discussed_Cord_Tissue__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Cord_Tissue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies when the task deals with a client that discussed Cord Tissue.</description>
    <label>Cord Tissue</label>
    <type>Checkbox</type>
</CustomField>