force-app/main/default/objects/Activity/fields/Discussed_Current_Promos_Discounts__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Current_Promos_Discounts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies when the task deals with a client that discussed Current Promos and Discounts.</description>
    <label>Current Promos and Discounts</label>
    <type>Checkbox</type>
</CustomField>