force-app/main/default/objects/Activity/fields/Discussed_Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Do_Not_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies when the task deals with a client that discussed Do Not Call.</description>
    <label>Do Not Call</label>
    <type>Checkbox</type>
</CustomField>