force-app/main/default/objects/Activity/fields/Discussed_Due_Dates_Pregnancy_Details__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Due_Dates_Pregnancy_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies when the task deals with a client that discussed Due Dates / Pregnancy Details.</description>
    <label>Due Dates / Pregnancy Details</label>
    <type>Checkbox</type>
</CustomField>