force-app/main/default/objects/Activity/fields/Discussed_Exosome__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Exosome__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies when the task deals with a client that discussed Exosome.</description>
    <label>Exosome</label>
    <type>Checkbox</type>
</CustomField>