force-app/main/default/objects/Activity/fields/Discussed_Followup_Timing__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Followup_Timing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies when the task deals with a client that discussed Follow-up Timing.</description>
    <label>Follow-up Timing</label>
    <type>Checkbox</type>
</CustomField>