force-app/main/default/objects/Activity/fields/Discussed_HSA_FSA_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Discussed_HSA_FSA_Eligibility__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies when the task deals with a client that discussed HSA/FSA Eligibility.</description>
    <label>HSA/FSA Eligibility</label>
    <type>Checkbox</type>
</CustomField>