force-app/main/default/objects/Activity/fields/Discussed_Information_Request__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Information_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies when the task deals with a client that discussed Information Request.</description>
    <label>Information Request</label>
    <type>Checkbox</type>
</CustomField>