force-app/main/default/objects/Activity/fields/Discussed_Kit_Ordering__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Kit_Ordering__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies when the task deals with a client that discussed How And When To Order A Kit.</description>
    <label>How And When To Order A Kit</label>
    <type>Checkbox</type>
</CustomField>