force-app/main/default/objects/Activity/fields/Discussed_Maternal_Exosome__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Maternal_Exosome__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies when the task deals with a client that discussed Maternal Exosome.</description>
    <label>Maternal Exosome</label>
    <type>Checkbox</type>
</CustomField>