force-app/main/default/objects/Activity/fields/Discussed_Medical_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Medical_Concerns__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies when the task deals with a client that discussed Medical Concerns.</description>
    <label>Medical Concerns</label>
    <type>Checkbox</type>
</CustomField>