force-app/main/default/objects/Activity/fields/Discussed_Negative_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Negative_Feedback__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies when the task deals with a client that discussed Negative Feedback.</description>
    <label>Negative Feedback</label>
    <type>Checkbox</type>
</CustomField>