force-app/main/default/objects/Activity/fields/Discussed_Payment_Plans__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Payment_Plans__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies when the task deals with a client that discussed Payment Plans.</description>
    <label>Payment Plans</label>
    <type>Checkbox</type>
</CustomField>