force-app/main/default/objects/Activity/fields/Discussed_Placenta_Tissue__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Placenta_Tissue__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies when the task deals with a client that discussed Placenta Tissue.</description>
    <label>Placenta Tissue</label>
    <type>Checkbox</type>
</CustomField>