force-app/main/default/objects/Activity/fields/Discussed_Positive_Feedback_Gratitude__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Positive_Feedback_Gratitude__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies when the task deals with a client that discussed Positive Feedback / Gratitude.</description>
    <label>Positive Feedback / Gratitude</label>
    <type>Checkbox</type>
</CustomField>