force-app/main/default/objects/Activity/fields/Discussed_Possible_Use_Cases__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Possible_Use_Cases__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies when the task deals with a client that discussed Possible Use Cases.</description>
    <label>Possible Use Cases</label>
    <type>Checkbox</type>
</CustomField>