force-app/main/default/objects/Activity/fields/Discussed_Pricing_Payment__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Pricing_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies when the task deals with a client that discussed Pricing/Payment.</description>
    <label>Pricing / Payment</label>
    <type>Checkbox</type>
</CustomField>