force-app/main/default/objects/Activity/fields/Discussed_Referral_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Referral_Recommendation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies when the task deals with a client that discussed Referral/Recommendation.</description>
    <label>Referral / Recommendation</label>
    <type>Checkbox</type>
</CustomField>