force-app/main/default/objects/Activity/fields/Discussed_Storage_Length_Options__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Storage_Length_Options__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field identifies when the task deals with a client that discussed Storage Length Options.</description>
    <label>Storage Length Options</label>
    <type>Checkbox</type>
</CustomField>