force-app/main/default/objects/Activity/fields/isdc_day_of_week__c.field-meta.xml
<CustomField>
    <fullName>isdc_day_of_week__c</fullName>
    <label>Day of the Week</label>
    <length>50</length>
    <type>Text</type>
</CustomField>