force-app/main/default/objects/Activity/fields/isdc_dialer_call_type__c.field-meta.xml
<CustomField>
    <fullName>isdc_dialer_call_type__c</fullName>
    <description>Captures the Dialer Type from InsideSales dialers.</description>
    <label>Dialer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seek</fullName>
            </value>
            <value>
                <fullName>Domino</fullName>
            </value>
            <value>
                <fullName>Click-to-Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>