force-app/main/default/objects/Activity/fields/isdc_dialer_list_name__c.field-meta.xml
<CustomField>
    <fullName>isdc_dialer_list_name__c</fullName>
    <description>Captures the call list name from InsideSales dialers.</description>
    <label>List Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>