force-app/main/default/objects/Activity/fields/isdc_dialer_query_name__c.field-meta.xml
<CustomField>
    <fullName>isdc_dialer_query_name__c</fullName>
    <description>Collects the Seek Query that triggered the InsideSales dial.</description>
    <label>Query Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>