force-app/main/default/objects/Activity/fields/isdc_inbound_wait_time__c.field-meta.xml
<CustomField>
    <fullName>isdc_inbound_wait_time__c</fullName>
    <description>Collects the on-call waiting times for InsideSales dialers.</description>
    <label>Wait Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>