force-app/main/default/objects/Activity/fields/tdc_tsw__Email_Cc__c.field-meta.xml
<CustomField>
    <fullName>tdc_tsw__Email_Cc__c</fullName>
    <label>Email Cc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>