force-app/main/default/objects/Activity/listViews/New_Cases.listView-meta.xml
<ListView>
    <fullName>New_Cases</fullName>
    <columns>TASK.CREATED_DATE</columns>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.STATUS</field>
        <operation>equals</operation>
        <value>Not Started</value>
    </filters>
    <label>New Cases</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>